cmake_minimum_required(VERSION 3.10)

# Set the project name
project(CppPrimer)

# Add executable
add_executable(eof_input eof_input.cpp)
add_executable(if if.cpp)
add_executable(intro_classes intro_classes.cpp)
add_executable(while while.cpp)
add_executable(io io.cpp)
add_executable(first_program first_program.cpp)
add_executable(for for.cpp)
